fix: search position on tablets

--- a/css/style.css
+++ b/css/style.css
@@ -500,7 +500,7 @@ template {
     padding-bottom: 30px;
   }
   .navbar__search {
-    margin-left: auto;
+    margin-left: 47px;
   }
   .navbar-menu {
     padding-top: 22pxz;
