--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,6 +1,10 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
+  .navbar
+    &__search
+      margin-right: auto
+      margin-left: 80px
 @media (max-width: 992px)
   .container
     max-width: 700px
@@ -11,10 +15,12 @@
       padding-top: 30px
       padding-bottom: 30px
     &__search
-      margin-left: auto
+      margin-left: 47px
     &-menu
-      padding-top: 22px
+      padding-top: 22pxz
       padding-bottom: 22px
+      width: 665px
+      justify-content: space-around
       &__link
         font-size: 12px
         line-height: 12px
@@ -24,18 +30,16 @@
 @media (max-width: 768px)
   .container
     max-width: 576px
-    width: 92%
+    width: 90%
   .navbar
     &__search, &-menu, &__user
       display: none
-  .logo
-    margin-left: 20px
   .menu
     &-button
       display: flex
       width: 16px
       height: 11px
-      padding: 0 10px
+      padding: 0
       align-items: center
       justify-content: space-between
       flex-direction: column
@@ -47,5 +51,8 @@
         height: 1px
         background-color: $text-color
 @media (max-width: 576px)
+  .navbar
+    &-top
+      padding: 28px 20px 0
   .logo
     width: 99px
